# careers-scraper

./: .dockerignore  .env.example  .gitignore  ACR.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  config.example.yaml  config.py  config.yaml.example  database.py  main.py  pyproject.toml  requirements.txt  run_tests.py  scheduler.py  scraper_service.py  telegram_notifier.py  test_scraper.py  web_app.py
.claude/: settings.local.json
.claude/agent-memory/python-expert/: MEMORY.md
.claude/agent-memory/qa-agent/: MEMORY.md  patterns.md
.claude/agents/: python-expert.md  qa-agent.md  scraping-architect.md  spec-writer.md
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 3f81d46d2e69_initial_schema.py
docs/ai/: cleanup-simplification.md  master-plan.md  phase-1-core.spec.md  phase-1-env-migration.md  phase-1n-cleanup-summary.md  phase-2-scrapers.spec.md  phase-3-dashboard.spec.md  phase-4-cloud.spec.md  phase-5-observability.spec.md  venv-fix-summary.md
scrapers/: __init__.py  base_scraper.py  cdprojektred_scraper.py  growe_scraper.py  uklon_scraper.py
scripts/: init_db.py  verify_imports.py
scripts/migrations/: 001_initial_schema.sql
src/: __init__.py  config.py  scheduler.py
src/careers_scraper/: config.py  main.py  scheduler.py
src/careers_scraper/core/: __init__.py
src/careers_scraper/db/: __init__.py  engine.py  models.py  session.py
src/careers_scraper/db/repositories/: __init__.py  company_repository.py  job_repository.py
src/careers_scraper/notifications/: __init__.py  telegram.py
src/careers_scraper/scrapers/: __init__.py
src/careers_scraper/scrapers/implementations/: __init__.py  cdprojektred.py  growe.py  uklon.py
src/careers_scraper/services/: __init__.py  scraper_service.py
src/careers_scraper/web/: __init__.py  app.py
src/careers_scraper/web/static/: app.js  index.html  style.css
src/core/: __init__.py  logging.py
src/notifications/: __init__.py  telegram.py
src/scrapers/: __init__.py  base.py
src/scrapers/implementations/: __init__.py  cdprojektred.py  growe.py  growetalents.py  uklon.py
src/services/: __init__.py  scraper_service.py
tests/: conftest.py
tests/integration/: test_web_api.py
tests/unit/: test_config.py  test_repositories.py
